--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.4.0",
     "firebase": "^10.1.0",
+    "firebase-functions": "^4.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
