--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
+    "react-youtube": "^10.1.0",
     "source-map-loader": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
